# parts_manager

./: CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
src/: actions.rs  cli.rs  components.rs  interactive.rs  main.rs  table.rs  ui.rs  util.rs  views.rs
src/cli/: args.rs
src/interactive/: components.rs  views.rs
