[package]
name = "parts_manager"
version = "0.1.0"
authors = ["Diana"]
edition = "2018"
description = "A GPT Partition Manager"

[[bin]]
name = "parts"
path = "src/main.rs"

[dependencies]
parts = { path = "../_NiteLinux/Userspace/parts" }
structopt = "0.3.14"
anyhow = "1.0.31"
linapi = "0.5.1"
byte-unit = "3.1.3"
serde_json = "1.0.53"
serde = { version = "1.0.111", features = ["derive"] }
tracing = "0.1.15"
tracing-subscriber = "0.2.5"

[dependencies.cursive]
version = "0.15.0"
default-features = false
features = [
    # "crossterm-backend",
    "termion-backend",
]
