[package]
name = "parts_manager"
version = "0.1.0"
authors = ["Diana"]
edition = "2018"
description = "A GPT Partition Manager"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "parts"
path = "src/main.rs"

[dependencies]
parts = { git = "https://github.com/DianaNites/parts", branch = "rewrite" }
structopt = "0.3.15"
anyhow = "1.0.31"
linapi = "0.5.1"
byte-unit = "4.0.8"
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
tracing = "0.1.16"
tracing-subscriber = "0.2.7"

[dependencies.cursive]
version = "0.15.0"
default-features = false
features = [
    # "crossterm-backend",
    "termion-backend",
]
